# chat

./: .gitignore  README.md  alembic.ini  create_db.py  main.py  pyproject.toml
alembic/: env.py
alembic/versions/: b7a78de4c9c9_initial_migration_create_users_table.py
app/: main.py
app/api/: deps.py
app/api/v1/: auth.py  health.py  routers.py  users.py
app/core/: config.py  security.py
app/domain/users/: schemas.py  services.py
app/infra/db/: session.py
app/infra/db/models/: user.py
app/infra/repositories/: user_repo.py
